# Spatial-Metric-Calculator

./: .gitignore  CMakeLists.txt  LICENSE  ZENODO_README.txt  index.md
docs/: README.md
docs/compilation_instructions/: unix_compilation_instructions.txt
docs/opensource_licenses/: Boost_license.txt  FLTK_license.txt  stb_image_write_license.txt
resources/: icon.icns
src/: base.cpp  data.cpp  dw_annotations.cpp  dw_areas.cpp  dw_base.cpp  dw_graph_loc_metrics.cpp  dw_grid_and_plans.cpp  dw_helper_and_misc.cpp  dw_input.cpp  dw_shapes.cpp  dw_snapon_select.cpp  dw_view_transform_lighting.cpp  dw_walls_and_textures.cpp  dxf_parser.cpp  edit_funcs.cpp  edit_window_funcs.cpp  floorplan_barriers.cpp  floors.cpp  fltk_extend.cpp  graph.cpp  input_output.cpp  location_visibility.cpp  locations.cpp  main.cpp  mesh.cpp  metric_interface.cpp  metrics.cpp  minheap.cpp  plot.cpp  r_text.cpp  stdafx.cpp  tabs_fltk_1-4-0.cpp  text_import.cpp  ui.cpp  undo_blocked_input.cpp  undo_redo.cpp
src/include/: base.hpp  building.hpp  button_ex.hpp  callbacks.hpp  ceiling.hpp  choicewin.hpp  colors.hpp  config.h  container.hpp  desk.hpp  draw_window.hpp  dxf_parser.hpp  enums.hpp  errors.hpp  floor.hpp  fltk_extend.hpp  graph.hpp  locations.hpp  matrix.hpp  minheap.hpp  plot.hpp  preprocessor.hpp  r_text.hpp  selectwin.hpp  splash.hpp  stdafx.h  tabs_fltk_1-4-0.hpp  text.hpp  thread_utils.hpp  undo_blocked_input.hpp  wall.hpp
